--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,5 +23,8 @@
 	"My Skills": "My Skills",
 	"I have experience in building projects using many frontend technologies.": "I have experience in building projects using many frontend technologies.",
 	"Get in touch": "Get in touch",
-	"So, if you have an idea and want someone to have a look at it? Get in touch or something": "So, if you have an idea and want someone to have a look at it? Get in touch or something"
+	"So, if you have an idea and want someone to have a look at it? Get in touch or something": "So, if you have an idea and want someone to have a look at it? Get in touch or something",
+	"A simple jump and run game based on object-oriented programming. Help Rudy find his way home.": "A simple jump and run game based on object-oriented programming. Help Rudy find his way home.",
+	"Task manager inspired by the Kanban system Create and organize tasks using drag and drop functions and assign users.": "Task manager inspired by the Kanban system Create and organize tasks using drag and drop functions and assign users.",
+	"This is my personal Website based on angular. Feel free to check the code on Github.": "This is my personal Website based on angular. Feel free to check the code on Github."
 }
